tests/src/frontend/visibility/invalid/module_private_fun.sk
module Foo;

private fun foo(): void {
  void
}

fun ok(): void {
  foo()
}

module end;

fun main(): void {
  Foo.foo();
  print_raw("Fail")
}
